@@ -1,3 +1,3 @@
 module RailsWizard
-  VERSION = "3.0.26"
+  VERSION = "3.0.27"
 end
